# zsign-rs

./: .gitignore  Cargo.toml  claude-progress.txt  code-review.findings.json  init.sh
crates/zsign/: Cargo.toml
crates/zsign-cli/: Cargo.toml
crates/zsign-cli/src/: main.rs
crates/zsign/src/: builder.rs  builder_pure.rs  error.rs  lib.rs
crates/zsign/src/bundle/: code_resources.rs  mod.rs
crates/zsign/src/codesign/: code_directory.rs  constants.rs  der.rs  mod.rs  superblob.rs
crates/zsign/src/crypto/: assets.rs  cert.rs  cms.rs  cms_ffi.rs  cms_pure.rs  mod.rs
crates/zsign/src/ipa/: archive.rs  extract.rs  mod.rs  signer_pure.rs
crates/zsign/src/macho/: mod.rs  parser.rs  signer.rs  signer_pure.rs  writer.rs
crates/zsign/tests/: cpp_parity.rs  size_comparison.rs
